--- a/styles.css
+++ b/styles.css
@@ -1021,10 +1021,10 @@ img {
   background-color: rgb(22 23 27 / var(--tw-bg-opacity));
 }
 .he {
-  background-image: url(https://tejxv.github.io/ResearchByLearning/images/patternBottom.svg);
+  background-image: url(https://tejxv.github.io/ResearchByLearning/images/patternBottom.webp);
 }
 .ie {
-  background-image: url(https://tejxv.github.io/ResearchByLearning/images/patternTop.svg);
+  background-image: url(https://tejxv.github.io/ResearchByLearning/images/patternTop.webp);
 }
 .je {
   background-size: cover;
