--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,4 @@
+@import url("https://rsms.me/inter/inter.css");
 *,
 :after,
 :before {
@@ -88,177 +89,7 @@ ol {
 :disabled {
   cursor: default;
 }
-img,
-svg {
-  display: block;
-  vertical-align: middle;
-}
-img {
-  height: auto;
-  max-width: 100%;
-}
-[hidden] {
-  display: none;
-}
-[multiple],
-[type="date"],
-[type="datetime-local"],
-[type="email"],
-[type="month"],
-[type="number"],
-[type="password"],
-[type="search"],
-[type="tel"],
-[type="text"],
-[type="time"],
-[type="url"],
-[type="week"] {
-  --tw-shadow: 0 0 #0000;
-  -webkit-appearance: none;
-  -moz-appearance: none;
-  appearance: none;
-  background-color: #fff;
-  border-color: #6b7280;
-  border-radius: 0;
-  border-width: 1px;
-  font-size: 1rem;
-  line-height: 1.5rem;
-  padding: 0.5rem 0.75rem;
-}
-[multiple]:focus,
-[type="date"]:focus,
-[type="datetime-local"]:focus,
-[type="email"]:focus,
-[type="month"]:focus,
-[type="number"]:focus,
-[type="password"]:focus,
-[type="search"]:focus,
-[type="tel"]:focus,
-[type="text"]:focus,
-[type="time"]:focus,
-[type="url"]:focus,
-[type="week"]:focus {
-  --tw-ring-inset: var(--tw-empty);
-  --tw-ring-offset-width: 0px;
-  --tw-ring-offset-color: #fff;
-  --tw-ring-color: #2563eb;
-  --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0
-    var(--tw-ring-offset-width) var(--tw-ring-offset-color);
-  --tw-ring-shadow: var(--tw-ring-inset) 0 0 0
-    calc(1px + var(--tw-ring-offset-width)) var(--tw-ring-color);
-  border-color: #2563eb;
-  box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow),
-    var(--tw-shadow);
-  outline: 2px solid transparent;
-  outline-offset: 2px;
-}
-::-webkit-datetime-edit-fields-wrapper {
-  padding: 0;
-}
-::-webkit-date-and-time-value {
-  min-height: 1.5em;
-}
-[multiple] {
-  -webkit-print-color-adjust: unset;
-  background-image: none;
-  background-position: 0 0;
-  background-repeat: unset;
-  background-size: initial;
-  color-adjust: unset;
-  padding-right: 0.75rem;
-}
-[type="checkbox"],
-[type="radio"] {
-  -webkit-print-color-adjust: exact;
-  --tw-shadow: 0 0 #0000;
-  -webkit-appearance: none;
-  -moz-appearance: none;
-  appearance: none;
-  background-color: #fff;
-  background-origin: border-box;
-  border-color: #6b7280;
-  border-width: 1px;
-  color: #2563eb;
-  color-adjust: exact;
-  display: inline-block;
-  flex-shrink: 0;
-  height: 1rem;
-  padding: 0;
-  -webkit-user-select: none;
-  -moz-user-select: none;
-  -ms-user-select: none;
-  user-select: none;
-  vertical-align: middle;
-  width: 1rem;
-}
-[type="checkbox"] {
-  border-radius: 0;
-}
-[type="radio"] {
-  border-radius: 100%;
-}
-[type="checkbox"]:focus,
-[type="radio"]:focus {
-  --tw-ring-inset: var(--tw-empty);
-  --tw-ring-offset-width: 2px;
-  --tw-ring-offset-color: #fff;
-  --tw-ring-color: #2563eb;
-  --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0
-    var(--tw-ring-offset-width) var(--tw-ring-offset-color);
-  --tw-ring-shadow: var(--tw-ring-inset) 0 0 0
-    calc(2px + var(--tw-ring-offset-width)) var(--tw-ring-color);
-  box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow),
-    var(--tw-shadow);
-  outline: 2px solid transparent;
-  outline-offset: 2px;
-}
-[type="checkbox"]:checked,
-[type="radio"]:checked {
-  background-color: currentColor;
-  background-position: 50%;
-  background-repeat: no-repeat;
-  background-size: 100% 100%;
-  border-color: transparent;
-}
-[type="checkbox"]:checked {
-  background-image: url("data:image/svg+xml;charset=utf-8,%3Csvg viewBox='0 0 16 16' fill='%23fff' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M12.207 4.793a1 1 0 0 1 0 1.414l-5 5a1 1 0 0 1-1.414 0l-2-2a1 1 0 0 1 1.414-1.414L6.5 9.086l4.293-4.293a1 1 0 0 1 1.414 0z'/%3E%3C/svg%3E");
-}
-[type="radio"]:checked {
-  background-image: url("data:image/svg+xml;charset=utf-8,%3Csvg viewBox='0 0 16 16' fill='%23fff' xmlns='http://www.w3.org/2000/svg'%3E%3Ccircle cx='8' cy='8' r='3'/%3E%3C/svg%3E");
-}
-[type="checkbox"]:checked:focus,
-[type="checkbox"]:checked:hover,
-[type="radio"]:checked:focus,
-[type="radio"]:checked:hover {
-  background-color: currentColor;
-  border-color: transparent;
-}
-[type="checkbox"]:indeterminate {
-  background-color: currentColor;
-  background-image: url("data:image/svg+xml;charset=utf-8,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='none' viewBox='0 0 16 16'%3E%3Cpath stroke='%23fff' stroke-linecap='round' stroke-linejoin='round' stroke-width='2' d='M4 8h8'/%3E%3C/svg%3E");
-  background-position: 50%;
-  background-repeat: no-repeat;
-  background-size: 100% 100%;
-  border-color: transparent;
-}
-[type="checkbox"]:indeterminate:focus,
-[type="checkbox"]:indeterminate:hover {
-  background-color: currentColor;
-  border-color: transparent;
-}
-[type="file"] {
-  background: unset;
-  border-color: inherit;
-  border-radius: 0;
-  border-width: 0;
-  font-size: unset;
-  line-height: inherit;
-  padding: 0;
-}
-[type="file"]:focus {
-  outline: 1px auto -webkit-focus-ring-color;
-}
-*,
+
 :after,
 :before {
   --tw-translate-x: 0;
