--- a/styles.css
+++ b/styles.css
@@ -878,12 +878,12 @@ ol {
   background-color: rgb(22 23 27 / var(--tw-bg-opacity));
 }
 .he {
-  background-image: url("images/1.webp");
+  background-image: url("images/1.svg");
   background-position: center;
   background-size: 200%;
 }
 .ie {
-  background-image: url("images/2.webp");
+  background-image: url("images/2.svg");
 }
 .je {
   background-size: cover;
